--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purpose coffee</title>
+    <title>Coffee shops</title>
     <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/3ee96ad665.js" crossorigin="anonymous"></script>
 </head>
@@ -12,7 +12,7 @@
     
     <div class="hero">
         <nav>
-            <h2 class="logo">Purpose</h2>
+            <h2 class="logo">Crooked</h2>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Menu</a></li>
