made changes to css and also added new info to html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             </div>    
         </nav>
     
-    <div class="info">
+    <div class="iContainer">
+        <img class="imgcon" src="images/coffee.jpeg" alt="">
+        <h1 class="hcom">Why do we drink coffee?</h1>
     </div>
     </div>
 
