updated html and css
deleted things outta html and added things to html. In css i did the same thing

--- a/index.html
+++ b/index.html
@@ -9,27 +9,16 @@
     <script src="https://kit.fontawesome.com/3ee96ad665.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
-    <div class="hero">
-        <nav>
-            <h2 class="logo">Crooked</h2>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Pages</a></li>
-            <li><a href="#">Near by</a></li>
-        </ul>
-            <div class="right">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-mug-hot"></i>
-            </div>    
-        </nav>
-    
-    <div class="iContainer">
-        <img class="imgcon" src="images/coffee.jpeg" alt="">
-        <h1 class="hcom">Why do we drink coffee?</h1>
+<div class="i">
+    <div class="ileft">
+        <div class="iLwrapper">
+            <h1 class="ihead">Crooked Coffee</h1>
+            <h2 class="ihead2">Why do we drink coffee?</h2>
+        </div>
     </div>
-    </div>
+
+    <div class="iright">right</div>
+</div>
 
 </body>
 </html>
