updated html n css
added more text to html and added new things to css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="iLwrapper">
             <h1 class="ihead">Crooked Coffee</h1>
             <h2 class="ihead2">Why do we drink coffee?</h2>
+            <span class="idesc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia repellat rem rerum, harum debitis recusandae est soluta odit consequatur quo tempore nostrum eos laboriosam dolorem, aliquam totam sapiente exercitationem aliquid.</span>
         </div>
     </div>
 
