updated html and css
added new styles in css and tried making a simple header. In html I ended up making and adding new classes and changing my title element, also added new elements and classes and deleted elements

--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coffee shops</title>
+    <title>cut clone</title>
     <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/3ee96ad665.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="i">
-    <div class="ileft">
-        <div class="iLwrapper">
-            <h1 class="ihead">Crooked Coffee</h1>
-            <h2 class="ihead2">Why do we drink coffee?</h2>
-            <span class="idesc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia repellat rem rerum, harum debitis recusandae est soluta odit consequatur quo tempore nostrum eos laboriosam dolorem, aliquam totam sapiente exercitationem aliquid.</span>
+    <nav class="nav-container">
+        <div class="nav-left">
+            <h1 class="nav-title">Cut Clone</h1>
         </div>
-    </div>
+            <div class="nav-right">
+                <ul class="nav-list">
+                    <li>BARBERS</li>
+                    <li>CLIENTS</li>
+                    <li>FAQS</li>
+                    <li>BLOGS</li>
+                    <li>REVIEWS</li>
+                </ul>   
+            </div>
 
-    <div class="iright">right</div>
-</div>
+            <div class="nav-btn">
+                <button class="nav-button">Download app</button>
+            </div>
 
+
+    </nav>
 </body>
 </html>
