updated html and css

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         </div>
             <div class="nav-right">
                 <ul class="nav-list">
-                    <li>BARBERS</li>
-                    <li>CLIENTS</li>
-                    <li>FAQS</li>
-                    <li>BLOGS</li>
-                    <li>REVIEWS</li>
+                    <li><a href="#">BARBERS</a></li>
+                    <li><a href="">CLIENTS</a></li>
+                    <li><a href="">FAQS</a></li>
+                    <li><a href="">Blogs</a></li>
+                    <li><a href="">REVIEWS</a></li>
                 </ul>   
             </div>   
 
