updated html and css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#">BARBERS</a></li>
                     <li><a href="">CLIENTS</a></li>
                     <li><a href="">FAQS</a></li>
-                    <li><a href="">Blogs</a></li>
+                    <li><a href="">BLOGS</a></li>
                     <li><a href="">REVIEWS</a></li>
                 </ul>   
             </div>   
