updated html and css

--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
             <div class="nav-btn">
                 <button class="nav-button">Download app</button>
             </div>
-    </nav>       
+    </nav>
+    <section class="hero">
+        <div class="hero-left">
+            <h1 class="hero-title">BARBERS</h1>
+            <p class="hero-text">Technology built specifically for barbers and barbershops. Get discovered by more clients. Book more appointments. Make more money. Get started today.
+            </p>
+            <button class="hero-lbtn">LEARN MORE</button>
+            
+
+        </div>
+
+
+
+
+        <div class="hero-right">
+            <span>right</span>
+
+        </div>
+
+    </section>       
 </body>
 </html>
