updated html and css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cut clone</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3ee96ad665.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -33,15 +34,12 @@
             <p class="hero-text">Technology built specifically for barbers and barbershops. Get discovered by more clients. Book more appointments. Make more money. Get started today.
             </p>
             <button class="hero-lbtn">LEARN MORE</button>
-            
-
         </div>
 
-
-
-
         <div class="hero-right">
-            <span>right</span>
+            <h1 class="hero-Rtitle">CLIENTS</h1>
+            <p class="hero-Rtext">Getting your haircut has never been easier. Find talented barbers anywhere, anytime. Check out their profile and reviews. Book and pay for haircuts with just a few clicks.</p>
+            <button class="hero-Rbtn">LEARN MORE</button>
 
         </div>
 
