updated css and html and added settings.jsom

--- a/index.html
+++ b/index.html
@@ -9,40 +9,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3ee96ad665.js" crossorigin="anonymous"></script>
 </head>
+<div class="all">
 <body>
-    <nav class="nav-container">
-        <div class="nav-left">
+    <header class="main-header">
             <h1 class="nav-title">Cut Clone</h1>
-        </div>
-            <div class="nav-right">
-                <ul class="nav-list">
-                    <li><a href="#">BARBERS</a></li>
-                    <li><a href="">CLIENTS</a></li>
-                    <li><a href="">FAQS</a></li>
-                    <li><a href="">BLOGS</a></li>
-                    <li><a href="">REVIEWS</a></li>
-                </ul>   
-            </div>   
+            <nav>
+                    <a href="#">BARBERS</a>
+                    <a href="#">CLIENTS</a>
+                    <a href="#">FAQS</a>
+                    <a href="#">BLOGS</a>
+                    <a href="#">REVIEWS</a>
+            </nav>      
 
-            <div class="nav-btn">
-                <button class="nav-button">Download app</button>
-            </div>
-    </nav>
+                <!-- <button class="nav-button">Download app</button> -->
+    </header>            
     <section class="hero">
-        <div class="hero-left">
             <h1 class="hero-title">BARBERS</h1>
             <p class="hero-text">Technology built specifically for barbers and barbershops. Get discovered by more clients. Book more appointments. Make more money. Get started today.
             </p>
-            <button class="hero-lbtn">LEARN MORE</button>
-        </div>
-
-        <div class="hero-right">
             <h1 class="hero-Rtitle">CLIENTS</h1>
             <p class="hero-Rtext">Getting your haircut has never been easier. Find talented barbers anywhere, anytime. Check out their profile and reviews. Book and pay for haircuts with just a few clicks.</p>
             <button class="hero-Rbtn">LEARN MORE</button>
 
         </div>
 
-    </section>       
+    </section>
+</div>       
 </body>
 </html>
