updated css and html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#">REVIEWS</a>
             </nav>      
 
-                <!-- <button class="nav-button">Download app</button> -->
+                        <button class="nav-button">Download app</button>
     </header>            
     <section class="hero">
             <h1 class="hero-title">BARBERS</h1>
